syntax = "proto3";

package pb;



//The Users service definition.
service Users {
 rpc CreateUserAccount          (CreateUserAccountRequest         ) returns (CreateUserAccountReply         );
 rpc UpdateUserAccount          (UpdateUserAccountRequest         ) returns (UpdateUserAccountReply         );
 rpc DeleteUserAccount          (DeleteUserAccountRequest         ) returns (DeleteUserAccountReply         );
 rpc GetUserAccount             (GetUserAccountRequest            ) returns (GetUserAccountReply            );
 rpc CreateTeamsAccount         (CreateTeamsAccountRequest        ) returns (CreateTeamsAccountReply        );
 rpc UpdateTeamsAccount         (UpdateTeamsAccountRequest        ) returns (UpdateTeamsAccountReply        );
 rpc DeleteTeamsAccount         (DeleteTeamsAccountRequest        ) returns (DeleteTeamsAccountReply        );
 rpc GetTeamsAccount            (GetTeamsAccountRequest           ) returns (GetTeamsAccountReply           );
 rpc AddUserToTeamsAccount      (AddUserToTeamsAccountRequest     ) returns (AddUserToTeamsAccountReply     );
 rpc DeleteUserFromTeamsAccount (DeleteUserFromTeamsAccountRequest) returns (DeleteUserFromTeamsAccountReply);
 rpc CreateGroup                (CreateGroupRequest               ) returns (CreateGroupReply               );
 rpc SubscribeToGroup           (SubscribeToGroupRequest          ) returns (SubscribeToGroupReply          );
 rpc UnsubscribeFromGroup       (UnsubscribeFromGroupRequest      ) returns (UnsubscribeFromGroupReply      );
 rpc DeleteGroup                (DeleteGroupRequest               ) returns (DeleteGroupReply               );
 rpc UpdateGroup                (UpdateGroupRequest               ) returns (UpdateGroupReply               );
 rpc GetGroupByID               (GetGroupByIDRequest              ) returns (GetGroupByIDReply              );
 rpc GetGroupByName             (GetGroupByNameRequest            ) returns (GetGroupByNameReply            );
 rpc IsGroupPrivate             (IsGroupPrivateRequest            ) returns (IsGroupPrivateReply            );
}

message CreateUserAccountRequest {}

message CreateUserAccountReply {}

message UpdateUserAccountRequest {}

message UpdateUserAccountReply {}

message DeleteUserAccountRequest {}

message DeleteUserAccountReply {}

message GetUserAccountRequest {}

message GetUserAccountReply {}

message CreateTeamsAccountRequest {}

message CreateTeamsAccountReply {}

message UpdateTeamsAccountRequest {}

message UpdateTeamsAccountReply {}

message DeleteTeamsAccountRequest {}

message DeleteTeamsAccountReply {}

message GetTeamsAccountRequest {}

message GetTeamsAccountReply {}

message AddUserToTeamsAccountRequest {}

message AddUserToTeamsAccountReply {}

message DeleteUserFromTeamsAccountRequest {}

message DeleteUserFromTeamsAccountReply {}

message CreateGroupRequest {}

message CreateGroupReply {}

message SubscribeToGroupRequest {}

message SubscribeToGroupReply {}

message UnsubscribeFromGroupRequest {}

message UnsubscribeFromGroupReply {}

message DeleteGroupRequest {}

message DeleteGroupReply {}

message UpdateGroupRequest {}

message UpdateGroupReply {}

message GetGroupByIDRequest {}

message GetGroupByIDReply {}

message GetGroupByNameRequest {}

message GetGroupByNameReply {}

message IsGroupPrivateRequest {}

message IsGroupPrivateReply {}

